--- a/Transparency-One/app/src/main/res/values/strings.xml
+++ b/Transparency-One/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Transparency-One</string>
+    <string name="title_product_list">Products</string>
+    <string name="title_product_detail">Product Detail</string>
 </resources>
